prefs: align labels and lists fixes #1365
(integrated from master branch change 388a147 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/prefs/prefs.css
+++ b/src/chrome/komodo/skin/prefs/prefs.css
@@ -58,3 +58,8 @@ groupbox#pref-languages-primary-selector-groupbox.collapse {
 {
     outline: 1px solid red;
 }
+
+#ui_tabs_sidepanes_groupbox > box
+{
+    float: left;
+}
